# Jarvis

./: .env.example  .gitignore  AGENTS.md  JARVIS.bat  JARVIS_DCS_Prototype_Test_Plan.md  PRD.md  README.md  package.json  pnpm-lock.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/08-pwa-foundation/: 08-01-SUMMARY.md
.planning/phases/13-responsive-layout/: 13-RESEARCH.md
.planning/phases/24-roles-integration-polish/: 24-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/web/: next.config.ts  package.json  playwright.config.ts
apps/web/public/: offline.html  sw.js
apps/web/scripts/: generate-icons.mjs
apps/web/src/: auth.ts
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/src/components/: alert-overlay.tsx  bottom-bar.tsx  coaching-panel.tsx  collapsible-widget.tsx  (+18 more)
apps/web/tests/: lighthouse-pwa.spec.ts  offline-regression.spec.ts
bridge/: jarvis_bridge.py
bridge-py/: .env.example  .gitignore  Start JARVIS Bridge.bat  pyproject.toml  setup_windows.ps1
bridge-py/scripts/: gen_stubs.sh
bridge-py/src/jarvis_bridge/: __init__.py  command_executor.py  command_listener.py  grpc_client.py  heartbeat.py  main.py  models.py  normalizer.py  publisher.py  tui.py  udp_listener.py
dcs/: install.bat  jarvis_export.lua  jarvis_export_minimal.lua
documents/: DCS_Gameplay_Data_Export_Catalogue.md  Mapping Research.md
supabase/migrations/: 001_sessions.sql  002_trainer_code.sql  003_enable_rls.sql  004_observer_role.sql
(+73 files in other folders)
