[project]
name = "jarvis-bridge"
version = "3.0.0"
description = "JARVIS DCS Python Bridge — gRPC + UDP cockpit relay"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.62",
  "grpcio-tools>=1.62",
  "httpx>=0.27",
  "rich>=13.7",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "supabase>=2.3",
]

[project.scripts]
jarvis-bridge = "jarvis_bridge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_bridge"]
